@@ -1,3 +1,6 @@
+* Tue Feb 06 2024 Mike Riddle <mike@sicura.us> - 1.0.0
+- Stopped controlling /etc/security/opasswd through this module in favor of the SIMP PAM module
+
 * Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 0.10.0
 - [puppetsync] Add EL9 support
 
